populando a tabela visualizar cadastro

--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -45,7 +45,7 @@ echo $this->flashMessenger();
                         <td><?php echo $funcionarios->matricula ?></td>
                         <td><?php echo $funcionarios->cod_status == 1 ? 'Ativo' : 'Inativo' ?></td>
                         <td>
-                            <a href="/admin/pessoa/visualisar-cadastro/cod_pessoa/"<?php echo $funcionarios->cod_pessoa ?>" title="Visualisar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
+                            <a href="/admin/pessoa/visualisar-cadastro/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Visualisar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
                             <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar cadastro" class="btn btn-primary btn btn-mini"><i class="icon-edit icon-white"></i></a>
                             <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
                         </td>
