populando a tabela visualizar cadastro

--- a/application/modules/admin/views/scripts/pessoa/visualisar-cadastro.phtml
+++ b/application/modules/admin/views/scripts/pessoa/visualisar-cadastro.phtml
@@ -20,10 +20,10 @@
                         <tr>
                             <td style="background-color: #08c; color: #FFFFFF;font-size: 20px;font-weight: bold;text-align: center;" colspan="2">Dados Principais</td>
                         </tr>
-                        <tr class="info">
+                       <!-- <tr class="info">
                             <td  style="font-size: 15px;font-weight: bold;width: 220px;background-color: #08c; color: #FFFFFF;">Código do Funcionário:</td>
                             <td><?php echo $this->pessoa->cod_pessoa?></td>
-                        </tr>
+                        </tr> -->
                         <tr>
                             <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Nome do Funcionário:</td>
                             <td><?php echo $this->pessoa->nome?></td>
