Alterações de correções conforme lista trazida pelo gestor.

--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -63,19 +63,19 @@
                     <div class="rows-fluid">
                         <div class="span6"> 
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Data da Aplicação:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Data da Aplicação:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dt_vacina ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número da Dose:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número da Dose:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dose ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Unidade de Saúde:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
