--- a/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
@@ -66,25 +66,25 @@
                     <div class="rows-fluid">
                         <div class="span6"> 
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Data da Aplicação:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Data da Aplicação:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dt_vacina ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número da Dose:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número da Dose:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dose ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Unidade de Saúde:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Grupo Vacinação:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Grupo Vacinação:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_grupo_vacina ?>
                                 </div>
@@ -92,7 +92,7 @@
                         </div>
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome da Vacina:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome da Vacina:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_vacina ?>
                                 </div>
@@ -141,19 +141,19 @@
                     <div class="rows-fluid">
                         <div class="span6"> 
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Data da Aplicação:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Data da Aplicação:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dt_vacina ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número da Dose:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número da Dose:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dose ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Grupo Vacinação:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Grupo Vacinação:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_grupo_vacina ?>
                                 </div>
@@ -161,13 +161,13 @@
                         </div>
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Unidade de Saúde:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome da Vacina:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome da Vacina:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_vacina ?>
                                 </div>
