--- a/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/alterar-unidade.phtml
@@ -16,13 +16,13 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome da Unidade:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome da Unidade:</label>
                                 <div class="controls">
                                     <?php echo $this->form->nome_un_saude ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número da Unidade:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número da Unidade:</label>
                                 <div class="controls">
                                     <?php echo $this->form->num_un_saude ?>
                                 </div>
