--- a/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
@@ -13,12 +13,12 @@
                         <div class="span6">
                             <div class="control-group">
                                 <div class="control-group">
-                                    <label for="inputEmail" class="control-label">Nome da Vacina:</label>
+                                    <label for="inputEmail" class="control-label"><b>*</b> Nome da Vacina:</label>
                                     <div class="controls">
                                         <?php echo $this->form->Vacina->nome_vacina ?>
                                     </div>
                                 </div>
-                                <label for="inputEmail" class="control-label">Lote da Vacina:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Lote da Vacina:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Lote->num_lote ?>
                                 </div>
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Data de Vencimento:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Data de Vencimento:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Lote->dt_venc ?>
                                 </div>
