--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -17,7 +17,7 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome Completo:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome Completo:</label>
                                 <div class="controls">
                                     <?php echo $this->form->nome ?>
                                 </div>
@@ -29,13 +29,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome da Mãe:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome da Mãe:</label>
                                 <div class="controls">
                                     <?php echo $this->form->nome_mae ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Data de Nascimento:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Data de Nascimento:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dt_nasc ?>
                                 </div>
@@ -162,12 +162,12 @@
                         <div class="span6">
                             <div class="control-group">
                                 <div class="control-group">
-                                    <label for="inputEmail" class="control-label">Telefone residencial:</label>
+                                    <label for="inputEmail" class="control-label"><b>*</b> Telefone residencial:</label>
                                     <div class="controls">
                                         <?php echo $this->form->Telefone->num_tel1 ?>
                                     </div>
                                 </div>
-                                <label for="inputEmail" class="control-label">Telefone celular:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Telefone celular:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Telefone->num_tel2 ?>
                                 </div>
@@ -199,19 +199,19 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Usuário:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Usuário:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Login->nome_login ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Senha:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Senha:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Login->senha_login ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Confirmar-Senha:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Confirmar-Senha:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Login->senha_login ?>
                                 </div>
