ALTERAÇÃO NO CARTÃO DE VACINAS

--- a/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
@@ -262,7 +262,7 @@
                             <div class="form-actions">
                                 <div class="control-group">
                                     <button class="btn btn-primary" type="submit">Salvar</button>
-                                    <button class="btn btn-primary" type="reset">Limpar</button>
+                                    <a href="/admin/pessoa/consulta-funcionario" ><button class="btn btn-primary">Cancelar</button> </a>
                                 </div>
                             </div>
                         </div>
