--- a/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
@@ -11,57 +11,57 @@
     isset($this->params['tab']) ?
                     $active[$this->params['tab']] = 'active' : $active[1] = 'active';
     ?>
+    
+    <table class="table table-bordered table-condensed " style="font-size: 13px;">
+
+        <thead  style="font-size: 15px;">
+            <tr>
+                <th colspan="7" style="background-color: #08c; color: #FFFFFF; font-size: 20px;text-align: center;">Dados do Paciente</th>
+            </tr>
+            <tr>
+                <th style="background-color: #08c; color: #FFFFFF;width: 180px;">Nome completo:&nbsp;</th>
+                <th colspan="6"><?php echo $this->paciente['nome'] ?></th>
+            </tr>
+            <tr>
+                <th style="background-color: #08c; color: #FFFFFF">Nome da mãe:&nbsp;</th>
+                <th colspan="6"><?php echo $this->paciente['nome_mae'] ?></th>
+            </tr>
+
+            <tr>
+                <th style="background-color: #08c; color: #FFFFFF">Data de Nascimento:&nbsp;</th>
+                <th colspan="6"><?php echo date('d/m/Y', strtotime($this->paciente['dt_nasc'])) ?></th>
+            </tr>
+            <tr>
+                <th style="background-color: #08c; color: #FFFFFF">RG:&nbsp;</th>
+                <th colspan="6"><?php echo $this->paciente['rg'] ?></th>
+            </tr>
+            <tr>
+                <th style="background-color: #08c; color: #FFFFFF">Sexo:&nbsp;</th>
+                <th colspan="6"><?php echo $this->paciente['sexo'] == 'M' ? 'Masculino' : 'Feminino' ?></th>
+            </tr>
+            <tr>
+                <th style="background-color: #08c; color: #FFFFFF">Telefone celular:&nbsp;</th>
+                <th colspan="6"><?php echo $this->paciente['num_tel'] ?></th>
+            </tr>
+            <tr>
+                <th style="background-color: #08c; color: #FFFFFF">E-mail:&nbsp;</th>
+                <th colspan="6"><?php echo $this->paciente['email'] ?></th>
+            </tr>
+        </thead>
+    </table>
+    
+    
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#tab1">Dados do Paciente</a></li>
-            <li class=""><a data-toggle="tab" href="#tab2">Registrar Vacinas</a></li>
-            <li class=""><a data-toggle="tab" href="#tab3">Aprazar Vacinas</a></li>
+            <li class="active"><a data-toggle="tab" href="#tab1">Registrar Vacinas</a></li>
+            <li class=""><a data-toggle="tab" href="#tab2">Aprazar Vacinas</a></li>
+         
         </ul>
 
         <div class="tab-content">
             <div id="tab1" class="tab-pane <?php echo $active[1] ?>">
 
                 <!--INICIO DO PRIMEIRO MENU-->
-                <div class="span6">
-                    <table class="table table-bordered">
-
-                        <tbody  style="font-size: 13px;">
-                            <tr class="info">
-                                <td style="font-size: 15px;font-weight: bold; width: 170px;">Código do Paciente:</td>
-                                <td><?php echo $this->paciente['cod_pessoa'] ?></td>
-                            </tr>
-                            <tr>
-                                <td style="font-size: 15px;font-weight: bold; width: 170px;">Nome do Paciente:</td>
-                                <td><?php echo $this->paciente['nome'] ?></td>
-                            </tr>
-                            <tr class="info">
-                                <td style="font-size: 15px;font-weight: bold; width: 170px;">Nome da Mãe:</td>
-                                <td><?php echo $this->paciente['nome_mae'] ?></td>
-                            </tr>
-                            <tr>
-                                <td style="font-size: 15px;font-weight: bold; width: 170px;">Data de Nascimento:</td>
-                                <td><?php echo date('d-m-Y', strtotime($this->paciente['dt_nasc'])) ?></td>
-                            </tr>
-                            <tr class="info">
-                                <td style="font-size: 15px;font-weight: bold; width: 170px;">Sexo:</td>
-                                <td><?php echo $this->paciente['sexo'] == 'M' ? 'Masculino' : 'Feminino' ?></td>
-                            </tr>
-                            <tr>
-                                <td style="font-size: 15px;font-weight: bold; width: 170px;">Telefone Celular:</td>
-                                <td><?php echo $this->paciente['num_tel'] ?></td>
-                            </tr>
-                            <tr class="info">
-                                <td style="font-size: 15px;font-weight: bold; width: 170px;">E-mail:</td>
-                                <td><?php echo $this->paciente['email'] ?></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div> <!--FIM DO PRIMEIRO MENU-->
-
-            <div id="tab2" class="tab-pane <?php echo $active[2] ?>">
-
-                <!--INICIO DO SEGUNDO MENU-->
                 <form class="form-horizontal" method="post">
                     <div class="rows-fluid">
                         <div class="span6"> 
@@ -131,12 +131,11 @@
                         </div>
                     </div>
                 </form>
-            </div> <!--FIM DO SEGUNDO MENU-->
+            </div> <!--FIM DO PRIMEIRO MENU-->
 
+            <div id="tab2" class="tab-pane <?php echo $active[2] ?>">
 
-            <div id="tab3" class="tab-pane <?php echo $active[3] ?>">
-
-                <!--INICIO DO TERCEIRO MENU-->
+                <!--INICIO DO SEGUNDO MENU-->
                 <form class="form-horizontal" method="post">
                     <div class="rows-fluid">
                         <div class="span6"> 
@@ -188,7 +187,10 @@
                         </div>
                     </div>
                 </form>
-            </div> <!--FIM DO TERCEIRO MENU-->
+            </div> <!--FIM DO SEGUNDO MENU-->
+
+
+          
 
         </div>
     </div>
