--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -44,15 +44,10 @@ echo $this->flashMessenger();
                     <td><?php echo $paciente->rg ?></td>
                     <td><?php echo $paciente->cpf ?></td>
                     <td>
-                        <a href="/admin/pessoa/visualisar-cadastro/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Visualisar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
-                        <a href="/admin/pessoa/editar-paciente/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" 
-                           title="Alterar cadastro" class="btn btn-info btn-mini">
-                            <i class="icon-edit icon-white"></i>
-                        </a>
-                        <a href="/admin/pessoa/excluir-paciente/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" 
-                           title="Excluir" class="btn btn-danger btn-mini confirm">
-                            <i class="icon-trash icon-white"></i>
-                        </a>
+                        <a href="/admin/pessoa/visualisar-cadastro-paciente/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" title="Visualisar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
+                        <a href="/admin/pessoa/editar-paciente/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" title="Alterar cadastro" class="btn btn-info btn-mini"><i class="icon-edit icon-white"></i> </a>
+                        <a href="/admin/pessoa/excluir-paciente/cod_pessoa/<?php echo $paciente->cod_pessoa ?>"title="Excluir" class="btn btn-danger btn-mini confirm"><i class="icon-trash icon-white"></i></a> 
+
                     </td>
                 </tr>
             <?php endforeach; ?>
