--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -231,7 +231,7 @@
                             <div class="form-actions">
                                 <div class="control-group">
                                     <button class="btn btn-primary" type="submit">Salvar</button>
-                                    <button class="btn btn-primary" type="reset">Limpar</button>
+                                    <a href="/admin/pessoa/consulta-paciente" ><button class="btn btn-primary">Cancelar</button> </a>
                                 </div>
                             </div>
                         </div>
