--- a/application/modules/admin/views/scripts/pessoa/visualisar-cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/visualisar-cadastro-paciente.phtml
@@ -1,16 +1,16 @@
 <ul class="pager offset10">
     <li class="previous">
-        <a href="/admin/pessoa/consulta-funcionario"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+        <a href="/admin/pessoa/consulta-paciente"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
     </li>
 
 </ul>
 
 <fieldset>
-    <legend>Visualisar Cadastro do Funcionário</legend> 
+    <legend>Visualisar Cadastro do Paciente</legend> 
 
     <div class="row-fluid">
 
-        <div  class ="span12">
+        <div  class ="span10">
            
 
                 <table class="table table-bordered table-condensed ">
@@ -101,28 +101,7 @@
                         <tr>
                             <td style="background-color: #08c; color: #FFFFFF;font-size: 20px;font-weight: bold;text-align: center;" colspan="2">Dados Complementares</td>
                         </tr>
-                        <tr class="info">
-                            <td  style="font-size: 15px;font-weight: bold;width: 220px;background-color: #08c; color: #FFFFFF;">Matrícula:</td>
-                            <td><?php echo $this->pessoa->matricula?></td>
-                        </tr>
-                        <tr>
-                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Cargo:</td>
-                            <td><?php echo $this->pessoa->nome_cargo?></td>
-                        </tr>
-
-                        <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Função:</td>
-                            <td><?php echo $this->pessoa->nome_funcao?></td>
-                        </tr>
-                       <!-- <tr>
-                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Lotação:</td>
-                            <td></td>
-                        </tr> -->
-
-                        <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Unidade de Saúde:</td>
-                            <td><?php echo $this->pessoa->nome_un_saude?></td>
-                        </tr>
+                                                
                         <tr>
                             <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Status:</td>
                             <td><?php echo $this->pessoa->nome_status?></td>
