Correções de finalização.

--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -15,7 +15,7 @@ echo $this->flashMessenger();
             <option value="">Todos</option>
         </select>
         <div class="input-append">
-            <input class="input-large" name="search" id="appendedInputButton" type="text">
+            <input maxlength="50" class="input-large" name="search" id="appendedInputButton" type="text">
             <button type="submit" class="btn btn-info"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
         </div>
     </form>
