--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -15,7 +15,7 @@ echo $this->flashMessenger();
         <option value="">Todos</option>
     </select>
     <div class="input-append">
-        <input class="input-xlarge" name="search" id="appendedInputButton" type="text">
+        <input maxlength="50" class="input-xlarge" name="search" id="appendedInputButton" type="text">
         <button class="btn btn-info" type="submit"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
     </div>
 </form>
