--- a/application/modules/admin/views/scripts/unidade/consulta-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/consulta-unidade.phtml
@@ -33,7 +33,7 @@
             <tbody>
                 <?php foreach ($this->unidades as $unidade): ?>
                     <tr>
-                        <td><?php echo $unidade->cod_un_saude ?></td>
+                        <td><?php echo $unidade->num_un_saude ?></td>
                         <td><?php echo $unidade->nome_un_saude ?></td>
                         <td>
                             <a href="/admin/unidade/alterar-unidade/cod_un_saude/<?php echo $unidade->cod_un_saude ?>" title="Alterar Unidade de Saúde" class="btn btn-primary btn btn-small"><i class="icon-edit icon-white"></i></a>
