--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -12,6 +12,7 @@ echo $this->flashMessenger();
             <option value="">Selecione a opção</option>
             <option value="nome">Nome</option>
             <option value="matricula">Matricula</option>
+            <option value="cod_sit">Situação do Cadastro</option>
             <option value="">Todos</option>
         </select>
         <div class="input-append">
@@ -37,17 +38,21 @@ echo $this->flashMessenger();
                 </tr>
             </thead>
             <tbody>
-                <?php foreach ($this->listFuncionarios as $key=>$funcionarios): ?>
+                <?php foreach ($this->listFuncionarios as $key => $funcionarios): ?>
                     <tr>
-                        <td><?php echo $key+1 ?></td>
+                        <td><?php echo $key + 1 ?></td>
                         <td><?php echo $funcionarios->nome_login ?></td>
                         <td><?php echo $funcionarios->nome ?></td>
                         <td><?php echo $funcionarios->matricula ?></td>
                         <td><?php echo $funcionarios->cod_status == 1 ? 'Ativo' : 'Inativo' ?></td>
                         <td>
-                            <a href="/admin/pessoa/visualisar-cadastro/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Detelhar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
-                            <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar cadastro" class="btn btn-primary btn btn-mini"><i class="icon-edit icon-white"></i></a>
-                            <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                            <?php if ($funcionarios->cod_sit): ?>
+                                <a href="/admin/pessoa/visualisar-cadastro/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Detelhar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
+                                <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar cadastro" class="btn btn-primary btn btn-mini"><i class="icon-edit icon-white"></i></a>
+                                <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                            <?php else: ?>
+                                <a href="/admin/pessoa/restaurar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Restaurar cadastro" class="btn btn btn-mini"><i class="icon-check"></i></a>&nbsp;
+                            <?php endif; ?>
                         </td>
                     </tr>
                 <?php endforeach; ?>
